# BofPC

./: CMakeLists.txt  main.c
19_laba/: file.c  file.h
19_laba/1/: task.txt
19_laba/2/: test_task.txt
19_laba/3/: task_2.txt
libs/algorithms/array/: array.c
libs/data_structures/: CMakeLists.txt
libs/data_structures/19_laba/: f.txt  file.c  file.h  q.txt
libs/data_structures/19_laba/1/: task.txt
libs/data_structures/19_laba/10/: f.txt  q.txt
libs/data_structures/19_laba/3/: task_1.txt  task_3.txt  task_4.txt  task_5.txt
libs/data_structures/19_laba/4/: task_3.txt
libs/data_structures/19_laba/6/: task.txt
libs/data_structures/19_laba/7/: task_1.txt  task_2.txt  task_3.txt
libs/data_structures/19_laba/8/: task.txt
libs/data_structures/19_laba/9/: task.txt
libs/data_structures/20_laba/: TASK10.c  TASK9.c  TASK9.с
libs/data_structures/20_laba/9/: 1.txt  2.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/ordered_set/: ordered_set.c  ordered_set.h
libs/data_structures/string/: string_.c  string_.h
libs/data_structures/unordered_set/: unordered_set.c  unordered_set.h
libs/data_structures/vector/: vector.c  vector.h
libs/data_structures/void_vector/: void_vector.c  void_vector.h
string/: string_.c  string_.h
